api_versioned_docs/version-12.0.5/avalonia/controls/documents/primitives/editorselectionflyout.mdx
---
title: 'EditorSelectionFlyout'
hide_title: true
slug: '/avalonia/controls/documents/primitives/editorselectionflyout'
uid: 'Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout'
commentId: 'T:Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">EditorSelectionFlyout Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Selection flyout that hosts a unified toolbar for the editor mini-bar.

</div>

<div className="apiref-page__signature">

```csharp
public class EditorSelectionFlyout
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../primitives/flyoutbase">FlyoutBase</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../primitives/popupflyoutbase">PopupFlyoutBase</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../flyout">Flyout</a> <span className="apiref-page__relation-separator">-&gt;</span> EditorSelectionFlyout
</div>
</div>

## Remarks

The flyout content is a single [Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar](xref:Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar) that uses
`ActiveTargetAreas` to show or hide tools based on the current
caret context (text, block, table, list). No content-switching is needed.

## Constructors

| Name | Description |
| --- | --- |
| [EditorSelectionFlyout](#uid-64621e69a2) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-64621e69a2"></span>

### EditorSelectionFlyout Constructor

```csharp
public EditorSelectionFlyout()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [Hide](../../primitives/popupflyoutbase.mdx#uid-5a05c678d3) | Hides the Flyout Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [ShowAt (2 overloads)](../../primitives/popupflyoutbase.mdx#uid-26d1f07208) | Shows the Flyout at the given Control Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [GetAttachedFlyout](../../primitives/flyoutbase.mdx#uid-b1afcec4e1) | Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [SetAttachedFlyout](../../primitives/flyoutbase.mdx#uid-fdff37b480) | Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [ShowAttachedFlyout](../../primitives/flyoutbase.mdx#uid-a8d83c7237) | Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [Bind (8 overloads)](../../../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [CheckAccess](../../../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../../../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [CoerceValue](../../../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [Equals](../../../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [GetBaseValue](../../../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [GetHashCode](../../../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../../../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [IsAnimating](../../../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [IsSet](../../../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../../../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../../../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [VerifyAccess](../../../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [Content](../../flyout.mdx#uid-211f71e77a) | Gets or sets the content to display in this flyout Inherited from [Flyout](../../flyout.mdx). |
| [ContentTemplate](../../flyout.mdx#uid-ce0052e836) | Gets or sets the data template used to display the content of the flyout. Inherited from [Flyout](../../flyout.mdx). |
| [FlyoutPresenterClasses](../../flyout.mdx#uid-a29a924253) | Gets the Classes collection to apply to the [FlyoutPresenter](xref:Avalonia.Controls.FlyoutPresenter) this Flyout is hosting Inherited from [Flyout](../../flyout.mdx). |
| [FlyoutPresenterTheme](../../flyout.mdx#uid-dd16f283ab) | Gets or sets the [Avalonia.Styling.ControlTheme](xref:Avalonia.Styling.ControlTheme) that is applied to the container element generated for the flyout presenter. Inherited from [Flyout](../../flyout.mdx). |
| [CustomPopupPlacementCallback](../../primitives/popupflyoutbase.mdx#uid-5e55132438) | Gets or sets a delegate handler method that positions the Popup control, when [Avalonia.Controls.Primitives.Popup.Placement](xref:Avalonia.Controls.Primitives.Popup.Placement) is set to [Avalonia.Controls.PlacementMode.Custom](xref:Avalonia.Controls.PlacementMode.Custom). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [HorizontalOffset](../../primitives/popupflyoutbase.mdx#uid-ceb07b8d2b) | Gets or sets the Horizontal offset of the popup in relation to the [Avalonia.Controls.Primitives.Popup.PlacementTarget](xref:Avalonia.Controls.Primitives.Popup.PlacementTarget). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [OverlayDismissEventPassThrough](../../primitives/popupflyoutbase.mdx#uid-9750f2448e) | Gets or sets a value indicating whether the event that closes the flyout is passed through to the parent window. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [OverlayInputPassThroughElement](../../primitives/popupflyoutbase.mdx#uid-158b3b043a) | Gets or sets an element that should receive pointer input events even when underneath the flyout's overlay. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [Placement](../../primitives/popupflyoutbase.mdx#uid-6cc5d900ca) | Gets or sets the desired placement of the popup in relation to the [Avalonia.Controls.Primitives.Popup.PlacementTarget](xref:Avalonia.Controls.Primitives.Popup.PlacementTarget). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementAnchor](../../primitives/popupflyoutbase.mdx#uid-2821742058) | Gets or sets the anchor point on the [Avalonia.Controls.Primitives.Popup.PlacementRect](xref:Avalonia.Controls.Primitives.Popup.PlacementRect) when [Avalonia.Controls.Primitives.Popup.Placement](xref:Avalonia.Controls.Primitives.Popup.Placement) is [Avalonia.Controls.PlacementMode.AnchorAndGravity](xref:Avalonia.Controls.PlacementMode.AnchorAndGravity). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementConstraintAdjustment](../../primitives/popupflyoutbase.mdx#uid-88ee296e55) | Gets or sets a value describing how the popup position will be adjusted if the unadjusted position would result in the popup being partly constrained. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementGravity](../../primitives/popupflyoutbase.mdx#uid-3e06cc8143) | Gets or sets a value which defines in what direction the popup should open when [Avalonia.Controls.Primitives.Popup.Placement](xref:Avalonia.Controls.Primitives.Popup.Placement) is [Avalonia.Controls.PlacementMode.AnchorAndGravity](xref:Avalonia.Controls.PlacementMode.AnchorAndGravity). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [Popup](../../primitives/popupflyoutbase.mdx#uid-7deeda2b3c) | Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [ShowMode](../../primitives/popupflyoutbase.mdx#uid-ac3c5d7690) | Gets or sets the desired ShowMode Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [VerticalOffset](../../primitives/popupflyoutbase.mdx#uid-031c4efd37) | Gets or sets the Vertical offset of the popup in relation to the [Avalonia.Controls.Primitives.Popup.PlacementTarget](xref:Avalonia.Controls.Primitives.Popup.PlacementTarget). Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [IsOpen](../../primitives/flyoutbase.mdx#uid-fd374d2468) | Gets or sets whether this Flyout is currently open. Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [Target](../../primitives/flyoutbase.mdx#uid-1555361c2e) | Gets the Target used for showing the Flyout Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [Dispatcher](../../../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |
| [Item](../../../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |

## Fields

| Name | Description |
| --- | --- |
| [ContentProperty](../../flyout.mdx#uid-3fb122baae) | Defines the [Avalonia.Controls.Flyout.Content](xref:Avalonia.Controls.Flyout.Content) property Inherited from [Flyout](../../flyout.mdx). |
| [ContentTemplateProperty](../../flyout.mdx#uid-82b2cccfbb) | Defines the [Avalonia.Controls.Flyout.ContentTemplate](xref:Avalonia.Controls.Flyout.ContentTemplate) property. Inherited from [Flyout](../../flyout.mdx). |
| [FlyoutPresenterThemeProperty](../../flyout.mdx#uid-dbaf2ba634) | Defines the [Avalonia.Controls.Flyout.FlyoutPresenterTheme](xref:Avalonia.Controls.Flyout.FlyoutPresenterTheme) property. Inherited from [Flyout](../../flyout.mdx). |
| [CustomPopupPlacementCallbackProperty](../../primitives/popupflyoutbase.mdx#uid-5c4d305049) | Defines the [Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.Popup.CustomPopupPlacementCallback) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [HorizontalOffsetProperty](../../primitives/popupflyoutbase.mdx#uid-5e9228ae03) | Defines the [Avalonia.Controls.Primitives.Popup.HorizontalOffset](xref:Avalonia.Controls.Primitives.Popup.HorizontalOffset) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [OverlayDismissEventPassThroughProperty](../../primitives/popupflyoutbase.mdx#uid-06a0ccefca) | Defines the [Avalonia.Controls.Primitives.PopupFlyoutBase.OverlayDismissEventPassThrough](xref:Avalonia.Controls.Primitives.PopupFlyoutBase.OverlayDismissEventPassThrough) property Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [OverlayInputPassThroughElementProperty](../../primitives/popupflyoutbase.mdx#uid-fdce19a1bd) | Defines the [Avalonia.Controls.Primitives.PopupFlyoutBase.OverlayInputPassThroughElement](xref:Avalonia.Controls.Primitives.PopupFlyoutBase.OverlayInputPassThroughElement) property Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementAnchorProperty](../../primitives/popupflyoutbase.mdx#uid-08643c8aef) | Defines the [Avalonia.Controls.Primitives.Popup.PlacementAnchor](xref:Avalonia.Controls.Primitives.Popup.PlacementAnchor) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementConstraintAdjustmentProperty](../../primitives/popupflyoutbase.mdx#uid-2621d5c291) | Defines the [Avalonia.Controls.Primitives.PopupFlyoutBase.PlacementConstraintAdjustment](xref:Avalonia.Controls.Primitives.PopupFlyoutBase.PlacementConstraintAdjustment) property Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementGravityProperty](../../primitives/popupflyoutbase.mdx#uid-0da608d8a7) | Defines the [Avalonia.Controls.Primitives.Popup.PlacementAnchor](xref:Avalonia.Controls.Primitives.Popup.PlacementAnchor) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [PlacementProperty](../../primitives/popupflyoutbase.mdx#uid-9e138bf69c) | Defines the [Avalonia.Controls.Primitives.Popup.Placement](xref:Avalonia.Controls.Primitives.Popup.Placement) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [ShowModeProperty](../../primitives/popupflyoutbase.mdx#uid-55b113088e) | Defines the [Avalonia.Controls.Primitives.PopupFlyoutBase.ShowMode](xref:Avalonia.Controls.Primitives.PopupFlyoutBase.ShowMode) property Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [VerticalOffsetProperty](../../primitives/popupflyoutbase.mdx#uid-25c4c8b25f) | Defines the [Avalonia.Controls.Primitives.Popup.VerticalOffset](xref:Avalonia.Controls.Primitives.Popup.VerticalOffset) property. Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [AttachedFlyoutProperty](../../primitives/flyoutbase.mdx#uid-c7d5b7f6f2) | Defines the AttachedFlyout property Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [IsOpenProperty](../../primitives/flyoutbase.mdx#uid-ab1657fb5e) | Defines the [Avalonia.Controls.Primitives.FlyoutBase.IsOpen](xref:Avalonia.Controls.Primitives.FlyoutBase.IsOpen) property Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [TargetProperty](../../primitives/flyoutbase.mdx#uid-8ef2929dfc) | Defines the [Avalonia.Controls.Primitives.FlyoutBase.Target](xref:Avalonia.Controls.Primitives.FlyoutBase.Target) property Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |

## Events

| Name | Description |
| --- | --- |
| [Closing](../../primitives/popupflyoutbase.mdx#uid-f69c2f1ebb) | Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [Opening](../../primitives/popupflyoutbase.mdx#uid-132cd892df) | Inherited from [PopupFlyoutBase](../../primitives/popupflyoutbase.mdx). |
| [Closed](../../primitives/flyoutbase.mdx#uid-8c33ee5ab6) | Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [Opened](../../primitives/flyoutbase.mdx#uid-d841e66d42) | Inherited from [FlyoutBase](../../primitives/flyoutbase.mdx). |
| [PropertyChanged](../../../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../../../avaloniaobject.mdx). |

</ApiRefPage>

